--- a/index.html
+++ b/index.html
@@ -500,10 +500,11 @@
           navBar.appendChild(newLink)
         }
         // EX12) Write a function to change the color of the main title
-        
-
-
-        // EX13) Write a function to change the background of the jumbotron
+        function mainTitle (str){
+          let mainTitle = document.querySelector("title")
+          mainTitle.innerHTML = str
+        }
+       // EX13) Write a function to change the background of the jumbotron
 
 
         // EX14) Write a function to remove all the links under "Elsewhere"
